# hermanto

./: .env  .env.example  .gitignore  pyproject.toml  transaction-analysis-plan.md
data/: debug_test.sqlite3  transaction_analysis.sqlite3
fixtures/: sample_data.json
reports/: 2026-05-10-daily-report.md  2026-05-11-daily-report.md
src/transaction_analysis/: cli.py  config.py  data_client.py  models.py  pipeline.py  providers.py  registry.py  report.py  scoring.py  serializer.py  storage.py
src/transaction_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline_fixture.py  test_scoring.py  test_storage.py
